--- a/index.html
+++ b/index.html
@@ -5,34 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My First Page</title>
-    <style>
-        * {
-            border: 1px solid black;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1>Hello World!</h1>
-    <h3>Goodbye</h3>
-    <h6>so small</h6>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus esse facilis ipsum? Recusandae error pariatur deserunt repellendus sapiente possimus assumenda aspernatur iure sequi quibusdam, architecto explicabo ad minima rerum vero.</p>
-    <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quas, magnam eum quidem cupiditate tempore rem nostrum tempora odit, aliquid, est temporibus numquam ex aspernatur quo saepe. Corrupti, qui optio.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est fugit deleniti at dolorum consequuntur vitae numquam excepturi aspernatur voluptas itaque quibusdam, velit blanditiis mollitia iusto repellat ipsa voluptates explicabo molestiae.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, sit! Amet est laudantium temporibus deleniti nulla dicta sunt totam eius recusandae exercitationem commodi autem deserunt, consequuntur quaerat iure eum optio?</p>
+    <h3>This is my first HTML webpage.</h3>
+    <h4>This page was writen from scratch and codeded during night two of the Alchemy Code Lab Bootcamp Prep Course. </h4>
+
+        <p class="large-text">Below are two paragraphs filled with latin text using the lorem fill feature.</p>
+
+        <p class ="med-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est fugit deleniti at dolorum consequuntur vitae numquam excepturi aspernatur voluptas itaque quibusdam, velit blanditiis mollitia iusto repellat ipsa voluptates explicabo molestiae.</p>
+
+        <p class="small-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, sit! Amet est laudantium temporibus deleniti nulla dicta sunt totam eius recusandae exercitationem commodi autem deserunt, consequuntur quaerat iure eum optio?</p>
+
+        <h3>Below are ten things</h3>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+                <li>10</li>
              </ul>
 
-    </div>
+        <h3>Below are three things </h3>     
+            <ul>
+                <li>asd</li>
+                <li>asd</li>
+                <li>asd</li>
+             </ul>
 </body>
 </html>
